samples/_failures_safe/1761609328_479dfb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_965cf82c.c: In function ‘main’:
./samples/SAFE/__tmp_965cf82c.c:147:9: error: expected ‘,’ or ‘;’ at end of input
  147 |         for (int i = 0
      |         ^~~
./samples/SAFE/__tmp_965cf82c.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_965cf82c.c:147:9: error: expected declaration or statement at end of input
